[package]
name = "wordle_guesser"
version = "0.1.0"
edition = "2021"
authors = [ "Andrew Meggs" ]
description = "This is a console program (primarily) for me to learn Rust, and (secondarily) to suggest good words for the web-based word-guessing game Wordle at https://www.powerlanguage.co.uk/wordle/."
repository = "https://github.com/meggsOmatic/WordleGuesser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon="1.5"
textwrap= { version="*", features=["terminal_size"] }
clap={ version="3", features=["derive"] }
itertools="0.10"